# sgemm-kernels

./: .gitignore  CMakeLists.txt  README.md  gemm.cu  kernel.cuh  plot.py  requirements.txt  run.sh  utils.cu  utils.cuh
include/: kernel_registry.cuh  launch_utils.cuh  matmul_kernel.cuh  sgemm_params.cuh  utils.cuh
kernels/: kernel1.cu  kernel1.cuh  kernel2.cu  kernel2.cuh  kernel3.cu
src/: cublas_kernel.cu  gemm.cu  kernel_registry.cu  kernels.cu  main.cu  utils.cu
test/: test_kernel_0.txt  test_kernel_1.txt  test_kernel_2.txt  test_kernel_3.txt
